tests/grammar/valid/v1_negative_declaration.c
#include <stdint.h>
#include <stdio.h>

int32_t i = -25;