tests/grammar/invalid/v1_simple_declaration.c
#include <stdint.h>
#include <stdio.h>

int64_t i =